--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Nunito+Sans');
+
 body {
   margin: 0;
   padding: 0;
+  font-size: 16px;
 }
