--- a/css/nurbek.css
+++ b/css/nurbek.css
@@ -101,3 +101,39 @@
   max-width: 8px!important;
   height: 8px!important;
 }
+
+.svg-wrapper {
+  position: relative;
+}
+
+.svg-wrapper svg {
+  position: absolute;
+  top: -10px;
+  width: 100%;
+  height: 100%;
+}
+.shape {
+  stroke-dasharray: 0 940;
+  stroke-dashoffset: -374;
+  stroke-width: 5px;
+  fill: transparent;
+  stroke: rgb(189, 189, 189);
+  border-bottom: 5px solid black;
+  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+  width: 100%;
+  height: 100%;
+}
+.text {
+  font-family: 'Roboto Condensed';
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 8px;
+  color: #fff;
+  top: -48px;
+  position: relative;
+}
+.svg-wrapper:hover .shape {
+  stroke-width: 2px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 1220;
+}
