--- a/css/alibek.css
+++ b/css/alibek.css
@@ -12,10 +12,11 @@ main{
 	list-style-type: none;
 	padding-left: 0;
 }
-.content .text{
+.test{
 	text-transform: uppercase;
 	margin-top: 35px;
 	margin-bottom: 15px;
+	font-weight: bold;
 
 }
 
@@ -88,7 +89,7 @@ main{
 }
 
 .picture:hover .overlay{
-	opacity: 1;
+	opacity: 0.7;
 }
 .effect{
 	color: #fff;
