--- a/css/alibek.css
+++ b/css/alibek.css
@@ -3,7 +3,7 @@ main{
 }
 .skills{
 	background-color: #f8f9f9;
-
+	overflow-x: hidden;
 }
 .content{
 	padding-top: 150px;
@@ -106,4 +106,14 @@ main{
 	background-color: #f5f5f5;
 	text-transform: uppercase;
 	color:#8e8e8e;
+}
+
+.row-no-padding {
+	margin-left: 0!important;
+	margin-right: 0!important;
+}
+
+.row-no-padding > [class*="col-"] {
+	padding-left: 0 !important;
+	padding-right: 0 !important;
 }
