--- a/css/Nurbek.css
+++ b/css/Nurbek.css
@@ -31,6 +31,7 @@
 }
 
 .contact textarea {
+  color: #fff;
   width: 100%;
   background-color: transparent;
   resize: none;
@@ -80,9 +81,250 @@
 
 .contact .player-card {
   display: flex;
+  margin-bottom: 30px;
+  overflow: hidden;
+  position: relative;
 }
 
 .contact .player-card img {
   width: 123px;
   height: 123px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: opacity .3s, border-width .3s;
 }
+
+
+.player-card .overlay:hover {
+  background-color: #000;
+  opacity: 0.7;
+}
+
+/* .contact .player-card:hover::after {
+  content: '+';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 123px;
+  height: 123px;
+  color: #fff;
+  text-align: center;
+  line-height: 123px;
+  font-size: 50px;
+} */
+
+.player-card .overlay {
+  line-height: 123px;
+  text-align: center;
+  font-size: 50px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 123px;
+  height: 123px;
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity .3s;
+  border: 3px solid #fff;
+}
+
+.player-card .data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 123px;
+}
+
+.player-card h4 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.player-card span {
+  font-size: 14px;
+}
+
+.player-card p {
+  font-size: 14px;
+  margin: 0;
+}
+
+/* overiting bootstrap class */
+.contact .carousel-indicators {
+  justify-content: flex-start;
+  width: 100%;
+  height: 6px;
+  bottom: -10px;
+  margin: 0;
+  width: 100%;
+}
+
+.contact .carousel-indicators .square {
+  display: inline-block;
+  height: 8px;
+  flex: 0 0 8px;
+}
+
+.square.active {
+  background-color: #1beac1;
+}
+
+
+/*====================== footer ===================*/
+
+.text-green {
+  color: #1beac1;
+}
+
+.text-light {
+  font-weight: 300;
+}
+
+footer {
+  min-height: 610px;
+  padding: 90px 0;
+  background-color: #1a1c27;
+  color: #fff;
+}
+
+.bckq {
+  display: inline-block;
+  width: 3px;
+  height: 16px;
+  background-color: #1beac1;
+  margin-right: 8px;
+}
+
+.text-light-blue {
+  color: #a1b1bc;
+}
+
+.footer-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.footer-column h4 {
+  font-size: 24px;
+  flex: 0 0 50px;
+}
+
+.brand-footer {
+  font-size: 60px;
+  margin-bottom: 18px;
+}
+
+.text p {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.subscribe {
+  display: flex;
+  background-color: #222533;
+  border-radius: 3px;
+}
+
+.subscribe input {
+  flex: 1;
+  background: transparent;
+  border: none;
+  padding-left: 20px;
+}
+
+.subscribe button {
+  flex: 0 0 48px;
+  height: 48px;
+  border-radius: 3px;
+  border: none;
+  background-color: #1beac1;
+  color: #fff;
+  font-size: 18px;
+}
+
+.news-card {
+  display: flex;
+  margin-bottom: 20px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.news-card:last-child {
+  margin-bottom: 0;
+}
+
+.news-card img {
+  width: 90px;
+  height: 90px;
+  filter: brightness(230%);
+  margin-right: 14px;
+}
+
+.news-card p {
+  margin-bottom: 0;
+}
+
+.news-card:hover p{
+  color: #fff;
+}
+
+.work-sample {
+  position: relative;
+  width: 100%;
+  cursor: pointer;
+}
+.work-sample:hover::after {
+  display: none;
+}
+
+.work-sample:hover::before {
+  display: block;
+}
+
+.work-sample::after, .work-sample::before {
+  display: block;
+  padding-top: 100%;
+  content: "";
+}
+
+.work-sample::after {
+  background: url('../images/gitlab-700.png');
+  background-size: cover;
+}
+
+.work-sample::before {
+  display: none;
+  background: url('../images/github-512.png');
+  background-size: cover;
+}
+
+.portfolio-link {
+  color: #1beac1;
+}
+
+.sub-footer {
+  min-height: 80px;
+  padding: 32px 0;
+  background-color: #222533;
+}
+
+.sub-footer-info p, .sub-footer-info a{
+  color: #717c88!important;
+  margin: 0 5px;
+}
+
+.sub-footer-info a:hover, .sub-footer-info span {
+  color: #1beac1!important;
+}
+
+.flex {
+  display: flex;
+}
+
+.jc-sb {
+  justify-content: space-between;
+}
+
+
